--- a/login-style.css
+++ b/login-style.css
@@ -1,5 +1,6 @@
 .login-title {
     text-align: center;
+    
 }
 
 .username{
@@ -12,4 +13,10 @@
 
 .button{
     text-align: center;
+}
+
+body{
+    background-color: aquamarine;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30;
 }
