--- a/login-style.css
+++ b/login-style.css
@@ -16,7 +16,16 @@
 }
 
 body{
-    background-color: aquamarine;
+    background: linear-gradient(to left, chocolate, brown);
+    color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30;
+}
+
+input[type=text], input[type = password]{
+    width: 100%;
+    margin: 10px 0;
+    border-radius: 10px;
+    padding: 15px 15px;
+    box-sizing: border-box;
 }
