--- a/login-style.css
+++ b/login-style.css
@@ -23,9 +23,27 @@ body{
 }
 
 input[type=text], input[type = password]{
-    width: 100%;
+    width: 50%;
     margin: 10px 0;
     border-radius: 10px;
     padding: 15px 15px;
     box-sizing: border-box;
+}
+
+button:hover {
+    opacity: 0.5;
+    cursor: pointer;
+
+}
+
+h1{
+    text-align: center;
+}
+
+form{
+    text-align: center;
+    margin: auto;
+    width: 35rem;
+    backdrop-filter: blur(16px) saturate(120%);   
+    border-radius: 10%; 
 }
