--- a/intro-style.css
+++ b/intro-style.css
@@ -2,6 +2,10 @@
     font-family: Arial, Helvetica, sans-serif; 
 }
 
+title { 
+    color: white; 
+}
+
 body { 
     background: linear-gradient(to left, chocolate, brown);
 }
@@ -21,6 +25,7 @@ body {
 }
 
 .name { 
+    color: white;
     text-align: center;
     font-size: 400%;
 }
