--- a/login-style.css
+++ b/login-style.css
@@ -13,6 +13,11 @@
 
 .button{
     text-align: center;
+    padding: 15px 15px;
+    border-radius: 10px;
+    width: 50%;
+    background-color: lightblue;
+    margin: 10px 0;
 }
 
 body{
@@ -46,4 +51,27 @@ form{
     width: 35rem;
     backdrop-filter: blur(16px) saturate(120%);   
     border-radius: 10%; 
+}
+
+.bubble {
+    position: absolute;
+    background-color: darkred;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    animation: moveBubble 5s linear infinite;
+}
+
+@keyframes moveBubble {
+    0% {
+        transform: translateY(0) rotate(0deg);
+    }
+
+    50% {
+        transform: translateY(-100vh) rotate(360deg);
+    }
+
+    100% {
+        transform: translateY(0) rotate(720deg);
+    }
 }
