--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button:hover {
   padding: 20px;
   margin-top: 10px;
   border-radius: 5px; 
-  background-color: chocolate;
+  background-color: white;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 
 }
