--- a/login-style.css
+++ b/login-style.css
@@ -13,11 +13,15 @@
 
 .button{
     text-align: center;
-    padding: 15px 15px;
-    border-radius: 10px;
+    padding: 8px 15px;
+    border-radius: 5px;
     width: 50%;
-    background-color: lightblue;
+    background-color: #4796ff;
+    color: #ffffff;
+    font-size: 16px;
+    outline: none;
     margin: 10px 0;
+    width: 90%;
 }
 
 body{
@@ -28,11 +32,13 @@ body{
 }
 
 input[type=text], input[type = password]{
-    width: 50%;
+    width: 90%;
+    background-color: #e2e2e2;
     margin: 10px 0;
-    border-radius: 10px;
-    padding: 15px 15px;
-    box-sizing: border-box;
+    border: none;
+    outline: none;
+    padding: 12px 20px;
+    border-radius: 4px;
 }
 
 button:hover {
