--- a/signup-style.css
+++ b/signup-style.css
@@ -77,3 +77,24 @@
   color: #4796ff;
   text-decoration: none;
 }
+
+.home_button { 
+  position: absolute;
+  top: 0;
+  left: 20; 
+  padding: 10px; 
+}
+
+.homepicture { 
+  border-radius: 50%; 
+  height: 100px; 
+  width: 100px; 
+  
+  /* Center the image*/
+  display:block; 
+  margin:0cap; 
+}
+
+
+
+
