--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@
 
 .home_button { 
   position: absolute;
+  align-items: center;
   top: 0;
-  right: 0; 
+  left: 700px; 
   padding: 10px; 
 }
 
 .homepicture { 
   border-radius: 50%; 
-  height: 100px; 
-  width: 100px; 
+  height: 50px; 
+  width: 50px; 
   
   /* Center the image*/
   display:block; 
