--- a/style.css
+++ b/style.css
@@ -5,10 +5,7 @@
 }
 
 .home_button { 
-  position: absolute;
-  align-items: center;
-  top: 0;
-  left: 700px; 
+  text-align: center;
   padding: 10px; 
 }
 
@@ -18,8 +15,9 @@
   width: 50px; 
   
   /* Center the image*/
-  display:block; 
-  margin:0cap; 
+  display : block;
+  margin: 0 auto; 
+
 }
 
 body {
@@ -51,7 +49,7 @@ button:hover {
 
 .container {
   width: 95%;
-  margin: auto;
+  margin: 0%;
 }
 
 .nav {
